tims code cleanup and fixing bugs in tims reading
Still need to think about tims m/z calibration